@@ -12,13 +12,18 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+
+import com.saas.springbackend.user.repository.UserRepository;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class NotificationServiceImpl implements NotificationService {
 
+    private final UserRepository userRepository;
     private final NotificationRepository notificationRepository;
 
     private final ModelMapper mapper;
@@ -31,7 +36,7 @@ public class NotificationServiceImpl implements NotificationService {
             NotificationType type) {
 
         Notification notification = new Notification();
-
+        notification.setCompany(user.getCompany());
         notification.setTitle(title);
         notification.setMessage(message);
         notification.setType(type);
@@ -50,11 +55,16 @@ public class NotificationServiceImpl implements NotificationService {
         return response;
     }
 
+
     @Override
-    public List<NotificationResponseDTO> getAllNotifications(Long userId) {
+    public List<NotificationResponseDTO> getAllNotifications() {
+
+        User admin = getLoggedInUser();
+
+        Long companyId = admin.getCompany().getId();
 
         return notificationRepository
-                .findByUserIdOrderByCreatedAtDesc(userId)
+                .findByCompanyIdOrderByCreatedAtDesc(companyId)
                 .stream()
                 .map(notification -> {
 
@@ -62,53 +72,109 @@ public class NotificationServiceImpl implements NotificationService {
                             mapper.map(notification, NotificationResponseDTO.class);
 
                     dto.setNotificationId(notification.getId());
-                    dto.setUserId(userId);
+                    dto.setUserId(notification.getUser().getId());
 
                     return dto;
-
                 })
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional
+    @Override
+    public void markAllAsRead() {
+        User admin = getLoggedInUser();
+        Long companyId = admin.getCompany().getId();
+
+        // Direct DB update instead of looping + saveAll
+        notificationRepository.markAllAsReadByCompanyId(companyId);
+    }
+
+
+
+
+    @Override
+    public void clearAllNotifications() {
+
+        User admin = getLoggedInUser();
+
+        Long companyId = admin.getCompany().getId();
+
+        List<Notification> notifications =
+                notificationRepository.findByCompanyIdOrderByCreatedAtDesc(companyId);
+
+        notificationRepository.deleteAll(notifications);
+    }
+    private User getLoggedInUser() {
+
+        Authentication authentication =
+                SecurityContextHolder.getContext().getAuthentication();
+        System.out.println("Authentication = " + authentication);
+
+        String email = authentication.getName();
+
+        System.out.println("Email from Security = " + email);
+
+        return userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
     }
 
     @Override
     public NotificationResponseDTO markAsRead(Long notificationId) {
 
-        Notification notification = notificationRepository.findById(notificationId)
-                .orElseThrow(() ->
-                        new RuntimeException("Notification not found"));
+
+        Notification notification =
+                notificationRepository.findById(notificationId)
+                        .orElseThrow(() ->
+                                new RuntimeException("Notification not found"));
+
 
         notification.setStatus(NotificationStatus.READ);
+
 
         Notification updatedNotification =
                 notificationRepository.save(notification);
 
-        NotificationResponseDTO response =
-                mapper.map(updatedNotification, NotificationResponseDTO.class);
 
-        response.setNotificationId(updatedNotification.getId());
-        response.setUserId(updatedNotification.getUser().getId());
+        NotificationResponseDTO dto =
+                mapper.map(updatedNotification,
+                        NotificationResponseDTO.class);
 
-        return response;
+
+        dto.setNotificationId(updatedNotification.getId());
+
+        dto.setUserId(updatedNotification.getUser().getId());
+
+
+        return dto;
     }
 
     @Override
-    public void markAllAsRead(Long userId) {
+    public NotificationResponseDTO getLatestNotification() {
 
+        // Get logged-in admin
+        User admin = getLoggedInUser();
+
+        Long companyId = admin.getCompany().getId();
+
+        // Get all company notifications (already ordered newest first)
         List<Notification> notifications =
-                notificationRepository.findByUserIdOrderByCreatedAtDesc(userId);
+                notificationRepository.findByCompanyIdOrderByCreatedAtDesc(companyId);
 
-        notifications.forEach(notification ->
-                notification.setStatus(NotificationStatus.READ));
+        // No notifications available
+        if (notifications.isEmpty()) {
+            return null;
+        }
 
-        notificationRepository.saveAll(notifications);
+        // Latest notification
+        Notification latestNotification = notifications.get(0);
+
+        NotificationResponseDTO dto =
+                mapper.map(latestNotification, NotificationResponseDTO.class);
+
+        dto.setNotificationId(latestNotification.getId());
+        dto.setUserId(latestNotification.getUser().getId());
+
+        return dto;
     }
 
-    @Override
-    public void clearAllNotifications(Long userId) {
-
-        List<Notification> notifications =
-                notificationRepository.findByUserIdOrderByCreatedAtDesc(userId);
-
-        notificationRepository.deleteAll(notifications);
-    }
 }
